--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -102,6 +102,23 @@
                     </section>
                     
                     <section>
+                        <a href="/blogs/blog6/" class="image">
+							<img src="/img/blogs/Pink%20lake%20Senegal.jpeg" alt="" data-position="center center" />
+						</a>
+                        <div class="content">
+                            <div class="inner">
+                                <header class="major">
+                                    <h3>Biography</h3>
+                                </header>
+                                <p></p>
+                                <ul class="actions">
+                                    <li><a href="/blogs/blog6/" class="button">Learn more</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    
+                    <section>
                         <a href="/blogs/blog7/" class="image">
 							<img src="/img/blogs/World.png" alt="" data-position="center center" />
 						</a>
