Blog 9 about instagram etc

--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
                 <img src="img/pic06.jpg" alt="" />
             </span>
             <header class="major">
-                <h3><a href="/blogs/ipsum" class="link">A connected world</a></h3>
+                <h3><a href="/blogs/blog9" class="link">A connected world</a></h3>
                 <p>How long do americans spend reading emails on a week?</p>
             </header>
         </article>
