--- a/public/blogs/index.html
+++ b/public/blogs/index.html
@@ -154,7 +154,7 @@
                     
                     <section>
                         <a href="/blogs/blog8/" class="image">
-							<img src="/img/blogs/pic09.jpg" alt="" data-position="center center" />
+							<img src="/img/blogs/Finance%20with%20R.png" alt="" data-position="center center" />
 						</a>
                         <div class="content">
                             <div class="inner">
@@ -188,7 +188,7 @@
                     
                     <section>
                         <a href="/blogs/blog9/" class="image">
-							<img src="/img/blogs/Connected%20World.jpg" alt="" data-position="center center" />
+							<img src="/img/blogs/A%20connected%20world.jpg" alt="" data-position="center center" />
 						</a>
                         <div class="content">
                             <div class="inner">
